--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "supertest": "^6.3.1"
   },
